--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
+.box {
+  background-color: #DAB129;
+  width: 90%;
+  min-height: 200px;
+  margin: 0 auto;
   padding: 20px;
-  color: white;
+  position: absolute;
+  top: 100px;
 }
 
-.App-title {
-  font-size: 1.5em;
+p {
+   font-size: 14px;
+   width: 100%;
+   margin-bottom: 2px;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+  color: #000;
+  margin-top: 0;
 }
