--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,40 @@ h2 {
   color: #000;
   margin-top: 0;
 }
+
+.input-box{
+    width: 95%;
+    height: 24px;
+    border-color: #c8ae5b;
+    -webkit-appearance: none;
+    border: 1px solid #b4b4b4;
+    border-radius: 4px;
+    min-width: 49px;
+    padding: 8px 16px;
+}
+
+.input-box:focus {
+    outline: 2;
+    border-color: #0f6193;
+}
+
+.dropdown-item{
+  width: 100%;
+  font-size: 10pt;
+}
+
+.dropdown-noresult{
+   border: 1px solid #ccc;
+  width: calc(100% - 30px);
+  position: absolute;
+  box-sizing: border-box;
+  background-color: white;
+  
+}
+
+@media (min-width: 960px) {
+  .box {
+    margin-left: 10%;
+    width: 500px;
+  }
+}
